# otus-cpp-basic

./: .gitignore  0_pow_simple.cpp  11_fib.cpp  1_my_pow_simple.cpp  1_pow.cpp  2_gcd_cin.cpp  2_my_gcd_cin.cpp  3_args.cpp  6_swap.cpp  CMakeLists.txt  README.md  check_value.cpp  check_value.h  classes.cpp  compilation.cpp  file_io.cpp  function_overloading.cpp  get_magic_number.cpp  get_magic_number.h  hello_world.cpp  high_scores.cpp  high_scores.h  main.cpp  move_me_out.cpp  move_me_out.hpp  netpbm.cpp  netpbm.h  structure.cpp  structure_operators.cpp  translation_unit1.cpp
hello_world/: example.cpp  example.h  hello_world.cpp  move_me_out.cpp  move_me_out.h
static_library/: CMakeLists.txt
